tests/snapshots/conformance__y_string_unicode_u+1fffe_nonchar.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uD83F\uDFFE"]
stdout --- 
["\uD83F\uDFFE"]
stderr --- 
<empty>
