tests/snapshots/conformance__y_string_unicode_u+200b_zero_width_space.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u200B"]
stdout --- 
["\u200B"]
stderr --- 
<empty>
