tests/snapshots/conformance__y_string_unicode_u+2064_invisible_plus.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["\u2064"]
stdout --- 
["\u2064"]
stderr --- 
<empty>
