tests/snapshots/conformance__y_string_unicode_u+fdd0_nonchar.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["\uFDD0"]
stdout --- 
["\uFDD0"]
stderr --- 
<empty>
