tests/snapshots/conformance__y_string_unicode_u+fffe_nonchar.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uFFFE"]
stdout --- 
["\uFFFE"]
stderr --- 
<empty>
