tests/snapshots/conformance__y_string_unicodeescapedbackslash.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u005C"]
stdout --- 
["\u005C"]
stderr --- 
<empty>
