tests/snapshots/conformance__y_string_with_del_character.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["aa"]
stdout --- 
["aa"]
stderr --- 
<empty>
