tests/snapshots/conformance__y_structure_lonely_int.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
42
stdout --- 
42
stderr --- 
<empty>
