tests/snapshots/conformance__y_structure_lonely_negative_real.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
-0.1
stdout --- 
-0.1
stderr --- 
<empty>
