tests/snapshots/conformance__y_structure_lonely_null.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
null
stdout --- 
null
stderr --- 
<empty>
